--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,13 @@
-{"builds": [
-    {
-      "src": "backend/**",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "backend/build",
-        "buildCommand": "python manage.py collectstatic --noinput && python manage.py migrate"
-      }
-    },
-    {
-      "src": "frontend/**",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "frontend/build",
-        "buildCommand": "npm install && npm run build"
-      }
-    }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
-  ]
+{
+    "builds": [{
+        "src": "chat_backend/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    }],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "chat_backend/wsgi.py"
+        }
+    ]
 }
