--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "chat_backend/wsgi.py"
+      "dest": "/backend/build/index.html"
         }
     ]
 }
