--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,18 @@
 {
-    "builds": [{
-        "src": "chat_backend/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    }],
+    "builds":  [
+    {
+      "src": "chat_backend/wsgi.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
+      }
+    },
+    {
+      "src": "build/**",
+      "use": "@vercel/static"
+    }
+  ],
     "routes": [
         {
             "src": "/(.*)",
