--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "build/static/$1"
+      "dest": "build/index.js"
     },
     {
       "src": "/favicon.ico",
