--- a/vercel.json
+++ b/vercel.json
@@ -1,34 +1,13 @@
 {
-  "builds": [
-    {
-      "src": "chat_backend/wsgi.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "15mb",
-        "runtime": "python3.9"
-      }
-    },
-    {
-      "src": "build/**",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "build/static/$1"
-    },
-    {
-      "src": "/favicon.ico",
-      "dest": "build/favicon.ico"
-    },
-    {
-      "src": "/index.html",
-      "dest": "build/index.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "chat_backend/wsgi.py"
-    }
-  ]
+ "builds": [{
+        "src": "chat_backend/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    }],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "chat_backend/wsgi.py"
+        }
+    ]
 }
